# PlaywrightDebugMover

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  realtime.rs  tool.rs
templates/: test.spec.ts
